WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165545
WebCore::AccessibilityRenderObject add the other missing BSTR roles tag names.
https://bugs.webkit.org/show_bug.cgi?id=165545
Summary
WebCore::AccessibilityRenderObject add the other missing BSTR roles tag names.
Karim
Reported
2016-12-07 13:42:08 PST
Add the other tag names that should be returned as the role. See "document structure"
https://wiki.mozilla.org/Accessibility/AT-Windows-API
Attachments
Patch
(2.00 KB, patch)
2016-12-07 13:56 PST
,
Karim
no flags
Details
Formatted Diff
Diff
Patch
(2.08 KB, patch)
2016-12-08 16:01 PST
,
Karim
no flags
Details
Formatted Diff
Diff
Patch
(6.99 KB, patch)
2016-12-10 20:44 PST
,
Karim
no flags
Details
Formatted Diff
Diff
Patch
(8.42 KB, patch)
2016-12-10 23:31 PST
,
Karim
no flags
Details
Formatted Diff
Diff
Patch
(8.42 KB, patch)
2016-12-11 00:11 PST
,
Karim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Karim
Comment 1
2016-12-07 13:56:55 PST
Created
attachment 296418
[details]
Patch
Karim
Comment 2
2016-12-08 16:01:13 PST
Created
attachment 296582
[details]
Patch
Alex Christensen
Comment 3
2016-12-09 09:49:20 PST
Comment on
attachment 296582
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=296582&action=review
> Source/WebCore/ChangeLog:8 > + No new tests needed.
Why not? This certainly changes behavior. It should be possible to write a test that verifies that the behavior was changed.
chris fleizach
Comment 4
2016-12-09 09:50:55 PST
Comment on
attachment 296582
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=296582&action=review
> Source/WebCore/ChangeLog:3 > + Added the other missing BSTR roles tag names.
this line should be the name of the bug
>> Source/WebCore/ChangeLog:8 >> + No new tests needed. > > Why not? This certainly changes behavior. It should be possible to write a test that verifies that the behavior was changed.
agreed
Karim
Comment 5
2016-12-09 09:56:34 PST
On IRC they told me there should be no tests.
> Comment on
attachment 296582
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=296582&action=review
> > > Source/WebCore/ChangeLog:8 > > + No new tests needed. > > Why not? This certainly changes behavior. It should be possible to write a > test that verifies that the behavior was changed.
Karim
Comment 6
2016-12-10 20:44:54 PST
Created
attachment 296847
[details]
Patch
chris fleizach
Comment 7
2016-12-10 21:23:52 PST
Comment on
attachment 296847
[details]
Patch You'll also need to add the test expectations file that is created when you run this test Thanks
Karim
Comment 8
2016-12-10 23:31:49 PST
Created
attachment 296856
[details]
Patch
Karim
Comment 9
2016-12-11 00:11:47 PST
Created
attachment 296858
[details]
Patch
Karim
Comment 10
2017-02-10 15:56:11 PST
This patch is not committed yet ???!
Radar WebKit Bug Importer
Comment 11
2017-02-10 15:56:37 PST
<
rdar://problem/30474763
>
chris fleizach
Comment 12
2017-02-10 15:57:45 PST
(In reply to
comment #10
)
> This patch is not committed yet ???!
CQ flag is not set on this patch
WebKit Commit Bot
Comment 13
2017-02-13 18:12:47 PST
Comment on
attachment 296858
[details]
Patch Clearing flags on attachment: 296858 Committed
r212270
: <
http://trac.webkit.org/changeset/212270
>
WebKit Commit Bot
Comment 14
2017-02-13 18:12:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug