Source/WebCore: Added the other missing BSTR roles tag names. https://bugs.webkit.org/show_bug.cgi?id=165545

Patch by Karim H <karim@karhm.com> on 2017-02-13
Reviewed by Chris Fleizach.

Test: accessibility/win/bstr-elements-role.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::shouldReturnTagNameAsRoleForMSAA):

LayoutTests:
Added the BSTR roles tag test for Windows.
https://bugs.webkit.org/show_bug.cgi?id=165545

Patch by Karim H <karim@karhm.com> on 2017-02-13
Reviewed by Chris Fleizach.

* accessibility/win/bstr-elements-role-expected.txt: Added.
* accessibility/win/bstr-elements-role.html: Added.

Canonical link: https://commits.webkit.org/185305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212270 268f45cc-cd09-0410-ab3c-d52691b4dbfc